[tool.poetry]
name = "ptodnes"
version = "1.11.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
keywords = ["network", "scanner", "osint", "security", "vulnerability-detection", "penetration-testing", "dns"]
readme = "README.md"
license = "GPLv3"
authors = [
    "Penterep <info@penterep.com>",
    "Ondrej Dohnal <xodhna45@vutbr.cz>"
]
description = "OSINT Domain Name Enumeration System"

[tool.poetry.urls]
Homepage = "https://www.penterep.com"
Source = "https://github.com/Penterep/ptodnes"
"Bug Reports" = "https://github.com/Penterep/ptodnes/issues"


[tool.poetry.dependencies]
python  = ">3.11, <=3.15"
aiodns  = "^4.0.0"
aiohttp = "^3.13.0"
aiopg   = "^1.4.0"
pyyaml  = "^6.0.0"
ptlibs  = "^1.0.0"
aiofiles = "^25.1.0"
punycode = "^0.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.test]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
sphinx = "^8.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"
pylint = "^3.3.1"
pytest-md-report = "^0.6.2"

[tool.poetry.scripts]
ptodnes = "ptodnes.__main__:__main__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
